[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot-gif-getter/GifGetterUI.gd" type="Script" id=1]

[node name="GifGetterUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="MarginContainer" parent="Control"]
margin_left = 10.0
margin_top = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Options"]
margin_right = 343.0
margin_bottom = 216.0

[node name="ButtonContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_right = 343.0
margin_bottom = 20.0

[node name="CaptureNowButton" type="Button" parent="Control/Options/VBoxContainer/ButtonContainer"]
margin_right = 91.0
margin_bottom = 20.0
focus_mode = 0
text = "Capture now"

[node name="CaptureInFiveSecondsButton" type="Button" parent="Control/Options/VBoxContainer/ButtonContainer"]
margin_left = 95.0
margin_right = 241.0
margin_bottom = 20.0
focus_mode = 0
text = "Capture in 5 seconds"

[node name="SaveLocationContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 24.0
margin_right = 343.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/SaveLocationContainer"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 19.0
text = "Save location"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/SaveLocationContainer"]
margin_left = 88.0
margin_right = 158.0
margin_bottom = 24.0
text = "result.gif"
expand_to_text_length = true

[node name="Button" type="Button" parent="Control/Options/VBoxContainer/SaveLocationContainer"]
margin_left = 162.0
margin_right = 245.0
margin_bottom = 24.0
focus_mode = 0
text = "Select path"

[node name="RenderQualityContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 52.0
margin_right = 343.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/RenderQualityContainer"]
margin_top = 5.0
margin_right = 281.0
margin_bottom = 19.0
text = "Render quality from 1 - 30 (1 is best quality)"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/RenderQualityContainer"]
margin_left = 285.0
margin_right = 343.0
margin_bottom = 24.0
text = "10"

[node name="FramesContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 80.0
margin_right = 343.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/FramesContainer"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "Frames"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/FramesContainer"]
margin_left = 51.0
margin_right = 109.0
margin_bottom = 24.0
text = "60"

[node name="FrameSkipContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 108.0
margin_right = 343.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/FrameSkipContainer"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Frame skip"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/FrameSkipContainer"]
margin_left = 74.0
margin_right = 132.0
margin_bottom = 24.0
text = "1"

[node name="FrameDelayContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 136.0
margin_right = 343.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/FrameDelayContainer"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
text = "Frame delay (ms)"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/FrameDelayContainer"]
margin_left = 114.0
margin_right = 172.0
margin_bottom = 24.0
text = "100"

[node name="ThreadsContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 164.0
margin_right = 343.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/ThreadsContainer"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
text = "Threads"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/ThreadsContainer"]
margin_left = 54.0
margin_right = 112.0
margin_bottom = 24.0
text = "4"

[node name="HotkeyContainer" type="HBoxContainer" parent="Control/Options/VBoxContainer"]
margin_top = 192.0
margin_right = 343.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="Control/Options/VBoxContainer/HotkeyContainer"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
text = "Hide UI  action"

[node name="LineEdit" type="LineEdit" parent="Control/Options/VBoxContainer/HotkeyContainer"]
margin_left = 100.0
margin_right = 158.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="Button" type="Button" parent="Control/Options/VBoxContainer/HotkeyContainer"]
margin_left = 162.0
margin_right = 194.0
margin_bottom = 24.0
text = "Set"

[node name="Console" type="MarginContainer" parent="Control"]
anchor_top = 0.8
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Console"]
margin_right = 297.0
margin_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Console/ScrollContainer"]
alignment = 2
